# otonoha

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: haiku_example.py  tanka_example.py
src/otonoha/: __init__.py
src/otonoha/music/: __init__.py  generator.py  music.py  style.py
src/otonoha/poetry/: __init__.py  base.py  haiku.py  poet.py  senryu.py  tanka.py
src/otonoha/rhythm/: __init__.py  analyzer.py
src/otonoha/utils/: __init__.py  syllable.py
tests/: test_haiku.py  test_rhythm.py  test_senryu.py  test_tanka.py
