[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otonoha"
version = "0.1.0"
description = "Turn Japanese poetry into music"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/otonoha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
